# ESharp

./: CMakeLists.txt
.github/workflows/: ci.yml
examples/: Switch.es  echo.es  main.es  switch.es  testing.es
source/: ast.hpp  lexer.cpp  lexer.hpp  main.cpp  parser.cpp  parser.hpp
source/error/: error.cpp
source/include/: ast.hpp  error.hpp  lexer.hpp  parser.hpp
source/parser/: ast.cpp  lexer.cpp  parser.cpp
